<resources>
    <string name="app_name">NotesApp</string>

    <!--   Splash Screen  -->
    <string name="spTitle">Notes App</string>


<!--   Add notes Activity  -->
    <string name="title">Title…</string>
    <string name="subTitle">Subtitle…</string>
    <string name="Notes">Notes…</string>
    <string name="priority">Priority</string>
    <string name="delete">Delete</string>
    <string name="no_filter">No Filter</string>
    <string name="high_to_low">High to Low</string>
    <string name="low_to_high">Low to High</string>
</resources>