<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.UpdateNotesActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E8E8E8"
        android:padding="5sp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16sp"
                android:layout_marginTop="16sp"
                android:layout_marginEnd="16sp"
                android:fontFamily="@font/merienda"
                android:background="@drawable/edit_text_bg"
                android:padding="14sp"
                android:hint="@string/title"
                android:id="@+id/updateNotesTitleEdt"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:layout_marginEnd="16sp"
                android:layout_marginStart="16sp"
                android:hint="@string/subTitle"
                android:fontFamily="@font/merienda"
                android:background="@drawable/edit_text_bg"
                android:padding="14sp"
                android:id="@+id/updateNotesSubTitleEdt"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_marginStart="16sp"
                android:layout_marginTop="16sp"
                android:layout_marginEnd="16sp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/priority"
                    android:textColor="@color/black"
                    android:fontFamily="@font/merienda_bold"
                    />
                <ImageView
                    android:layout_width="20sp"
                    android:layout_height="20sp"
                    android:background="@drawable/green_dot"
                    android:layout_margin="8sp"
                    android:id="@+id/greenPriority"
                    />
                <ImageView
                    android:layout_width="20sp"
                    android:layout_height="20sp"
                    android:background="@drawable/yellow_dot"
                    android:layout_margin="8sp"
                    android:id="@+id/yellowPriority"
                    />
                <ImageView
                    android:layout_width="20sp"
                    android:layout_height="20sp"
                    android:background="@drawable/red_dot"
                    android:layout_margin="8sp"
                    android:id="@+id/redPriority"
                    />


            </LinearLayout>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="250sp"
                android:layout_marginTop="16sp"
                android:layout_marginEnd="16sp"
                android:layout_marginStart="16sp"
                android:hint="@string/Notes"
                android:fontFamily="@font/merienda"
                android:background="@drawable/edit_text_bg"
                android:padding="14sp"
                android:gravity="start"
                android:id="@+id/updateNotesEdt"
                />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="25sp"
        android:backgroundTint="@color/blue"
        android:src="@drawable/done_icon"
        android:id="@+id/updateNotesActionBtn"
        android:contentDescription="TODO" />
</RelativeLayout>